# znedi3-pypi

./: Makefile  meson.build  pyproject.toml
.github/workflows/: build.yml
_msvc/: znedi3.sln
_msvc/testapp/: testapp.vcxproj
_msvc/vsznedi3/: vsznedi3.vcxproj
_msvc/znedi3/: znedi3.vcxproj
vsznedi3/: vsznedi3.cpp
znedi3/: kernel.cpp  znedi3.cpp  znedi3_impl.cpp  znedi3_impl.h
