[build-system]
requires = ["meson-python", "vapoursynth"]
build-backend = "mesonpy"

[project]
name = "vapoursynth-znedi3"
description = "A CPU-optimized version of nnedi3 for VapourSynth"
readme = "readme.rst"
requires-python = ">=3.12"
license = "GPL-2.0"
license-files = ["gpl2.txt"]
authors = [
    {name = "Fredrik Mellbin", email = "fredrik.mellbin@gmail.com"},
]
keywords = ["source", "video", "deinterlacing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Video",
]
dependencies = ["VapourSynth"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/sekrit-twc/znedi3.git"
Issues = "https://github.com/sekrit-twc/znedi3/issues"

[tool.meson-python.wheel]
exclude = ["*/*.dll.a", "*/*.lib"]
